It's getting there. Still some ssues with trailers and large vehicles.

--- a/VehicleSpawner/VehicleSpawner.csproj
+++ b/VehicleSpawner/VehicleSpawner.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>VehicleSpawner</RootNamespace>
-    <AssemblyName>CarSpawerAI</AssemblyName>
+    <AssemblyName>VehicleSpawner</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
